<resources>
    <string name="app_name">XYLinkSDK</string>
    <string name="hang_up">挂断</string>
    <string name="switch_camera">切摄像头</string>
    <string name="mute_mic"> 静音</string>
    <string name="unmute_mic">取消静音</string>
    <string name="switch_speaker_mode">打开听筒模式</string>
    <string name="close_switch_speaker_mode">关闭听筒模式</string>
    <string name="switch_call_module">语音模式</string>
    <string name="close_switch_call_module">语音退出</string>
    <string name="start_switch_call_module">已开启通话语音模式</string>
    <string name="switch_call_in">语音通话中</string>
    <string name="cell_state_pstn_incall">通话中...</string>
    <string name="cell_state_audio_only_incall">语音通话中</string>

    <string name="hand_up">举手</string>
    <string name="hand_down">取消举手</string>
    <string name="end_speech">结束发言</string>
    <string name="close_video">关闭视频</string>
    <string name="open_video">打开视频</string>
    <string name="call_to">视频通话邀请中&#8230;</string>
    <string name="conf_control_text">会控</string>
    <string name="pstn_app_cell_text">电话语音</string>

    <string name="interaction_text">互动</string>


    <string name="start_record_video">录制</string>
    <string name="end_record_video">录制结束</string>
    <string name="call_video_mute">视频暂停</string>
    <string name="call_no_video">网络不给力，暂时无法接收视频</string>
    <string name="MuteByNoInput">对方未开启视频</string>

    <string name="MuteByUser">对方忙，暂时关闭视频</string>
    <string name="MuteByBWLimit">对方网络不稳定，无法传输视频</string>
    <string name="MuteByConfMgmt">对方视频已被主持人关闭</string>
    <string name="call_video_requesting">视频正在请求中...</string>

    <string name="button_text_record">开始录制</string>
    <string name="button_text_stop">停止录制</string>
    <string name="recording_text_stopped">录制结束</string>
    <string name="recording_text">录制中 </string>
    <string name="recording_text_stopped_nemo_no_space">您的终端存储空间不足，录制失败</string>
    <string name="recording_text_stopped_no_nemo_exist">远端不是终端设备，无法录制</string>
    <string name="recording_text_stopped_expired">本次录制已达最大时长30分钟，录制自动停止</string>
    <string name="recording_text_stopped_account_no_space">您的帐户空间不足，无法录制新的视频</string>
    <string name="third_conf_record_notice">录制完成，录制视频已保存到云会议室管理员的文件夹</string>
    <string name="recording_text_preparing">录制中 00:00:00</string>
    <string name="who_is_recording" formatted="false">%s正在录制</string>
    <string name="recording_non_enetrprise_meeting">云会议室不属于任何，无法录制</string>
    <string name="recording_storage_not_enough">录制的存储空间已满，您无法开始录制。\n请删除已有的录制视频，\n或联系管理员购买更多存储空间。</string>
    <string name="recording_expire">录制失败，您的尚未开通录制服务或服务已过期，\n请联系管理员购买。</string>
    <string name="recording_fail">录制失败</string>
    <string name="recording_service_unavailable">录制服务暂时不可用，请稍候再试</string>
    <string name="someone_is_recording">其他用户已发起了录制，您无法重复录制</string>
    <string name="record_exceed_concurrency_limit">已达最大录制方数，不能发起录制</string>
    <string name="h323gw_no_resource">当前在线呼叫数已达网关服务上限，请稍候重试</string>
    <string name="service_reach_max_count">当前在线呼叫数已达服务上限，请稍候再试</string>
    <string name="service_expired">服务已过期，请管理员更新服务许可证</string>
    <string name="no_operation_permission">您无操作权限</string>

    <string name="im_notification_ccs_transfer">正在转接中，请稍候</string>
    <string name="im_notification_ccs">坐席忙，请耐心等待</string>


    <string name="call_enter_service">正在转接客服</string>
    <string name="queen_top_part">在您之前还有</string>
    <string name="queen_bottom_part">位用户正在等待</string>
    <string name="locked_people">主屏已锁定</string>
    <string name="unlock_people">解锁</string>


    <string name="statistics_network">网络探测</string>
    <string name="statistics_content">内容共享</string>
    <string name="statistics_participant">与会者</string>
    <string name="statistics_local_name">本地</string>
    <string name="statistics_channel_name">通道名称</string>
    <string name="statistics_codec">Codec</string>
    <string name="statistics_resolution">分辨率</string>
    <string name="statistics_frame_rate">帧率(fps)</string>
    <string name="statistics_band_width">带宽(kbps)</string>
    <string name="statistics_bit_rate">码率(kbps)</string>
    <string name="statistics_atx">音频发送</string>
    <string name="statistics_arx">音频接收</string>
    <string name="statistics_vtx">视频发送</string>
    <string name="statistics_vrx">视频接收</string>
    <string name="statistics_rtt">往返时延(ms)</string>
    <string name="statistics_jitter">抖动(ms)</string>
    <string name="statistics_package_lost">丢包率(%)</string>
    <string name="statistics_tx">发送</string>
    <string name="statistics_rx">接收</string>
    <string name="update_brand_confirm">confirm</string>
    <string name="audio_debug_open_aeconfig">AE调试开关已打开</string>
    <string name="share_download_link">Share Download Link</string>
    <string name="call_hold_meeting_more">更多</string>
    <string name="call_dtmf_keyboard">键盘</string>
    <string name="switch_layout">切换布局</string>
    <string name="add_other">邀请通话</string>
    <string name="button_close_pip">关闭小窗</string>
    <string name="button_open_pip">打开小窗</string>
    <string name="default_feedback_content">请输入您的宝贵意见和建议</string>
    <string name="send_feedback">发送</string>
    <string name="feedback_success">已收录，感谢您的反馈</string>
    <string name="feedback">快速反馈</string>


    <string name="call_statistics_pvtx">vout</string>
    <string name="call_statistics_pvrx">vin</string>
    <string name="call_statistics_atx">aout</string>
    <string name="call_statistics_arx">ain</string>
    <string name="call_statistics_others">others</string>
    <string name="call_statistics_dba">dba</string>

    <string name="dtmf_0">0</string>
    <string name="dtmf_1">1</string>
    <string name="dtmf_2">2</string>
    <string name="dtmf_3">3</string>
    <string name="dtmf_4">4</string>
    <string name="dtmf_5">5</string>
    <string name="dtmf_6">6</string>
    <string name="dtmf_7">7</string>
    <string name="dtmf_8">8</string>
    <string name="dtmf_9">9</string>
    <string name="dtmf_s">*</string>
    <string name="dtmf_p">#</string>


    <!-- log releated strings -->
    <string name="ziping">正在压缩</string>
    <string name="zip_success">压缩成功</string>
    <string name="uploading">正在上传</string>
    <string name="upload_result">上传%s</string>
    <string name="upload_failed_no_response">上传失败，请检查网络连接</string>
    <string name="cancel">取消</string>
    <string name="downloading">正在下载新版本</string>
    <string name="string_ext_id">企业ID:</string>
    <string name="string_input_ext_id_hint">请输入企业id</string>
    <string name="string_private_host">PrivateHost:</string>
    <string name="string_input_private_host_hint">请输入PrivateHost</string>
    <string name="string_dev_host">Dev环境</string>
    <string name="string_prd_host">Prd环境</string>
    <string name="string_host_select">环境选择:</string>
    <string name="string_save">保存</string>
    <string name="string_private_mode">私有云模式:</string>
    <string name="string_xy_prd_ext_id">小鱼Prd企业Id:</string>
    <string name="string_xy_dev_ext_id">小鱼Dev企业Id:</string>
    <string name="string_long_click_input_hint">长按下面的企业ID可填写到下方的企业Id输入框</string>
    <string name="string_set_app_config">设置环境</string>
    <string name="string_login_with_xy_account">小鱼账号登录</string>
    <string name="string_login_with_third_party">匿名登录</string>
    <string name="string_xy_logo">小鱼Logo</string>
    <string name="string_input_display_name">呼叫中用户显示名称</string>
    <string name="string_input_external_id">用户唯一标识(如：UserId或者手机号)</string>
    <string name="string_login">登 录</string>
    <string name="string_input_account">请输入手机号/邮箱</string>
    <string name="string_input_password">请输入密码</string>

    <string name="clear_white_board_cancel">取消</string>
    <string name="clear_white_board_confirm">确定</string>
    <string name="clear_white_board_title">清空白板</string>
    <string name="exit_white_board_title">关闭白板</string>
    <string name="clear_white_board_content">点击“确定”按钮将会清空白板中的所有内容</string>
    <string name="exit_white_board_content">点击“确定”按钮将会使通话中的人退出白板功能</string>
    <string name="sure">确定</string>
    <string name="share_screen_permission_tips">分享屏幕会使应用处于后台, 如果要通过悬浮窗按钮返回到应用程序, 则需要手动开＜后台弹出界面＞权限, 否则无法通过悬浮窗按钮打开应用, 需要手动点击应用程序图标回到APP</string>

    <string name="call_share_screen_txt1">当前正在共享手机屏幕</string>
    <string name="call_share_screen_txt2">可按Home键，打开其他应用进行共享</string>

    <!--扫码-->
    <string name="qr_name">二维码</string>
    <string name="i_know">我知道了</string>
    <string name="permission">抱歉,你的%1$s权限没有打开,无法正常服务
        \n请点击”设置”->在应用程序中找到”popon”->权限管理->%2$s->”允许”即可 </string>
    <string name="camera">摄像头(相机)</string>
</resources>
